--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "url": "https://github.com/buribalazs/eu-edge-solution/issues"
   },
   "homepage": "https://github.com/buribalazs/eu-edge-solution#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-pug": "^3.2.0",
     "gulp-sass": "^3.1.0"
   }
 }
